// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image component should render a default Image correctly 1`] = `
<img
  alt=""
  className=""
  src="http://placekitten.com/g/300/300"
  style={null}
/>
`;

exports[`Image component should render bordered prop correctly 1`] = `
<img
  alt=""
  className="p-image--bordered"
  src="http://placekitten.com/g/300/300"
  style={null}
/>
`;

exports[`Image component should render both bordered and shadowed props correctly 1`] = `
<img
  alt=""
  className="p-image--bordered p-image--shadowed"
  src="http://placekitten.com/g/300/300"
  style={null}
/>
`;

exports[`Image component should render shadowed prop correctly 1`] = `
<img
  alt=""
  className="p-image--shadowed"
  src="http://placekitten.com/g/300/300"
  style={null}
/>
`;
